Edited base URL and deleted bck transition.

--- a/assets/scss/components/_list-post.scss
+++ b/assets/scss/components/_list-post.scss
@@ -5,7 +5,7 @@
 $list-post-content-position-mobile: 2rem;
 $list-post-content-position-desktop: 3rem;
 $list-post-picture-after-background: linear-gradient(0deg, rgba($color-gray, .7), rgba($color-white, 0));
-$list-post-picture-hover-boxshadow: 0 5px 55px 5px rgba(0,0,0,.2);
+$list-post-picture-hover-boxshadow: 0 5px 24px 0 rgba(0,0,0,.2);
 $list-post-margin-mobile: 3rem;
 $list-post-margin-desktop: 4rem;
 
