--- a/assets/scss/base/common.scss
+++ b/assets/scss/base/common.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  background-color: red; // revise .border-body
+  background-color: $color-white; // revise .border-body
   color: $color-black;
   font-family: $font-family-second;
   font-size: 62.5%; // = 10px, 2.4rem 14px, 2.4rem = 24px..
