--- a/_includes/doc/open.html
+++ b/_includes/doc/open.html
@@ -1,6 +1,5 @@
 <head>
-  <meta charset="UTF-8">
-  <link href="http://gmpg.org/xfn/11" rel="profile">
+  <meta charset="utf-8">
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -25,7 +24,7 @@
   <meta property="og:image" content="{{ site.baseurl }}/public/thumb.jpg"/>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ "/assets/scss/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/scss/main.css" | relative_url }}">
 
   <!-- favicon -->
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
