--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__section">
     <a href="/" class="header__logo-link">
-      Jekyll Example
+      {{ site.title }}
     </a>
   </div>
   <div class="header__section">
