--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__section">
-    <a href="/" class="header__logo-link">
+    <a href="{{ site.baseurl }}" class="header__logo-link">
       {{ site.title }}
     </a>
   </div>
