--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer__section footer__section--credits">
-    {{ 'now' | date: "%Y" }} <span class="footer__cc">(cc)</span> {{ site.title }}, by <a href="https://jano.cool">gruncho</a>
+    {{ 'now' | date: "%Y" }} <span class="footer__cc">©</span> {{ site.title }}, by <a href="https://jano.cool">gruncho</a>
   </div>  
   <div class="footer__section footer__section--rrss">
     <a href="http://twitter.com/gruncho" target="_blank" class="footer__rrss footer__rrss--twitter">
